# LoyaltyHub

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
fastapi/: .env.example  Dockerfile  pyproject.toml
fastapi/app/: main.py
fastapi/app/api/v1/: ai.py  auth.py  gamification.py  health.py  loyalty.py  offers.py  users.py
fastapi/app/core/: config.py
fastapi/app/db/: session.py
fastapi/app/dependencies/: auth.py
fastapi/app/models/: __init__.py  account.py  loyalty_program.py  loyalty_transaction.py  offer.py  streak.py  user.py
fastapi/app/schemas/: ai.py  loyalty.py  offer.py  streak.py  user.py
fastapi/app/scripts/: import_data.py
fastapi/app/services/: ai_service.py  auth_service.py  loyalty_service.py  offer_service.py  streak_service.py
fastapi/data/: Accounts.csv  EcosystemOffers.csv  LoyaltyHistory.csv  LoyaltyPrograms.csv  Offers.csv  Users.csv
fastapi/migrations/: env.py
fastapi/migrations/versions/: 2f9800b06e08_add_all_models.py  7bfaddfed6fd_add_user_streaks_table.py  89b07c742263_add_offer_type_and_target_product_id.py  d3b679bf919a_add_hashed_password_to_user.py
fastapi/tests/: conftest.py  test_loyalty.py  test_offers.py
